@@ -33,6 +33,8 @@ https://github.com/elastic/beats/compare/v6.5.2...6.5[Check the HEAD diff]
 
 *Affecting all Beats*
 
+- Log events at the debug level when dropped by encoding problems. {pull}9251[9251]
+
 *Auditbeat*
 
 *Filebeat*
